# lightweight-llm-pi

./: .env.example  .gitattributes  .gitignore  README.md  ask.bat  chat.bat  pyproject.toml  requirements.txt
docs/: github-publish.md  raspberry-pi.md
models/: README.md
scripts/: install_raspberry_pi.sh  run_llama_cpp_windows.ps1
src/lightweight_llm_pi/: __init__.py  app.py  calculator.py  config.py  llm.py  safety.py
tests/: test_calculator.py  test_safety.py
